--- a/Projet_GGVie.ipynb
+++ b/Projet_GGVie.ipynb
@@ -25,11 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import requests"
+    "import requests\n",
+    "import numpy as np"
    ],
    "metadata": {
     "collapsed": false
