creation de subdataframe

--- a/Projet_GGVie.ipynb
+++ b/Projet_GGVie.ipynb
@@ -90,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "outputs": [],
    "source": [
-    "# Merge des stock\n",
-    "stock_merged = stock_unite_legale.merge(stock_etablissement,on='siren',how='left')\n",
+    "# Sous-dataframe stock\n",
+    "stock_merged = stock_unite_legale.merge(stock_etablissement,on='siren')\n",
     "\n",
-    "# Merge des historiques\n",
+    "# Sous-dataframe historiques\n",
     "stock_hist_merged = stock_unite_legale_hist.merge(stock_etablissement_hist,on=['siren','dateDebut','dateFin'],how='left')\n",
     "\n",
-    "# Merge des unite legales\n",
+    "# Sous-dataframe unite legales\n",
     "stock_unite_legale_merged = stock_unite_legale.merge(stock_unite_legale_hist,on=['siren', 'dateDebut', 'etatAdministratifUniteLegale', 'nomUniteLegale',\n",
     "       'nomUsageUniteLegale', 'denominationUniteLegale',\n",
     "       'denominationUsuelle1UniteLegale', 'denominationUsuelle2UniteLegale',\n",
@@ -109,13 +109,33 @@
     "       'economieSocialeSolidaireUniteLegale', 'societeMissionUniteLegale',\n",
     "       'caractereEmployeurUniteLegale'],how='left')\n",
     "\n",
-    "# Merge des etablissements\n",
+    "# Sous-dataframe etablissements\n",
     "stock_etablissement_merged = stock_etablissement.merge(stock_etablissement_hist,on=['siren', 'nic', 'siret', 'dateDebut', 'etatAdministratifEtablissement',\n",
     "       'enseigne1Etablissement', 'enseigne2Etablissement',\n",
     "       'enseigne3Etablissement', 'denominationUsuelleEtablissement',\n",
     "       'activitePrincipaleEtablissement',\n",
     "       'nomenclatureActivitePrincipaleEtablissement',\n",
     "       'caractereEmployeurEtablissement'],how='left')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1000000"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_merged.shape[0]"
    ],
    "metadata": {
     "collapsed": false
